# doink

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  doink.py  flake.nix  pyproject.toml
doink/: kafka.py  objects.py  opensearch.py  shared.py  state.py  test_doink.py
tests/: __init__.py  conftest.py  test_doink.py  test_kafka.py  test_shared.py  test_state.py
